--- a/NSub.Cli/NSub.Cli.csproj
+++ b/NSub.Cli/NSub.Cli.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="gpl-3.0.txt" />
